Fix highlighted menu items on mobile to close #84

--- a/assets/scss/blocks/nova-blocks/food-menu/_style.scss
+++ b/assets/scss/blocks/nova-blocks/food-menu/_style.scss
@@ -54,5 +54,9 @@
 }
 
 .nova-food-menu-item--highlighted {
-  --item-padding: var( --theme-spacing );
+  --item-padding: var( --theme-spacing-tiny );
+
+  @include above(tablet) {
+    --item-padding: var( --theme-spacing );
+  }
 }
